--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 	</p>
 	<h1 class="header1 yellow_background black">What's the deal?</h1>
 	<p class="description1" >
-		Shvazam needed a hand migrating from their already popular iPhone application to iPad.  We couldn't have been more happy to lend them a hand.
+		Shazam needed a hand migrating from their already popular iPhone application to iPad.  We couldn't have been more happy to lend them a hand.
 	</p>
 	<ul class="inline-list icon-list">
 		<li><%= image_tag "gfx_icon_design.png" %></li>
