Add DS_Store file to gitignore; fix CSS hover in navigation; allow anonymous visitors to view category show page

--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -55,6 +55,10 @@
 	text-align:center;
 	border-bottom:1px solid #222;}
 
+#page_top a{
+    color:#ccc;
+}
+
 #top_nav{
 	text-align:left;
 	width:1000px;
@@ -70,10 +74,10 @@
 		line-height:16px;
 		list-style: none;
 		cursor: pointer;}
-	#top_nav li:hover{
+	#top_nav li a:hover{
 		color:#434D48;}
 	#top_nav a{
-		color:#434D48;
+		color:#ccc;
 		text-decoration: none;}
 	#top_nav img.logo{
 		float:left;
