This shit's like, all dynamically populated and stuff now

--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -490,6 +490,10 @@
 	background:url('<%= asset_path "gfx_mesh_mask.png" %>');
 }
 
+.actions input{
+    
+}
+
 @font-face {
 	font-family: 'bebasneue';
 	src: url('/webfonts/BebasNeue.eot');
