Add support for tags in projects

--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -494,6 +494,20 @@
     
 }
 
+form div.field{
+    width:800px;
+}
+
+form div.field label{
+    width:200px;
+    text-align:right;
+}
+
+form div.field input, 
+form div.field textarea{
+    
+}
+
 @font-face {
 	font-family: 'bebasneue';
 	src: url('/webfonts/BebasNeue.eot');
