Add admin controller WIP

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,6 +5,7 @@
 	<link rel="shortcut icon" href="favicon.ico" />
 	<%= stylesheet_link_tag "reset" %>
 	<%= stylesheet_link_tag "main" %>
+	<%= stylesheet_link_tag "admin" %>
 	<style type="text/css">
 		body{ background-color:#eee;}
 	</style>
