Modify permissions on the admin pages; adjust layout and style up action buttons; create the base project :show page with homepage HTML for now; showcase images on homepage link to project/show/:id page; add routes

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Eye Cue Lab - Administration</h1>
 
+<%= link_to "Manage Projects", projects_path %>
+<br /><br />
+<%= link_to "Manage Categories", categories_path %>
