--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -6,3 +6,34 @@
 div#site_container{
     margin-top:50px;
 }
+
+.actions input {
+    width:auto;
+    text-indent:0px;
+    margin-bottom:10px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #ffffff;
+	padding: 10px 20px;
+	background: -moz-linear-gradient(
+		top,
+		#003776 0%,
+		#346080);
+	background: -webkit-gradient(
+		linear, left top, left bottom, 
+		from(#003776),
+		to(#346080));
+	border-radius: 30px;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	border: 1px solid #546368;
+	-moz-box-shadow:
+		0px 1px 3px rgba(069,069,069,0.5),
+		inset 0px 0px 1px rgba(255,255,255,0.7);
+	-webkit-box-shadow:
+		0px 1px 3px rgba(069,069,069,0.5),
+		inset 0px 0px 1px rgba(255,255,255,0.7);
+	text-shadow:
+		0px -1px 0px rgba(000,000,000,0.4),
+		0px 1px 0px rgba(255,255,255,0.3);
+}
