--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,30 +1,17 @@
-<p id="notice"><%= notice %></p>
+<br />
+<div class="section_container_opt2 fabric_background">
+	<div id="content">
+		<div id="homepage_banners_info">
+			<!-- project info goes here -->
+		</div>
+		<div id="homepage_banners">
+			<div id="homepage_banner_container">
+				<!-- project main image goes here -->
+			</div>
+		</div>
+	</div>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @project.name %>
-</p>
-
-<p>
-  <b>Description:</b>
-  <%= @project.description %>
-</p>
-
-<p>
-  <b>Story:</b>
-  <%= @project.story %>
-</p>
-
-<p>
-  <b>Details:</b>
-  <%= @project.details %>
-</p>
-
-<p>
-  <b>Category:</b>
-  <%= @project.category_id %>
-</p>
-
-
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<div class="section_container_opt3">
+	<%= image_tag "gfx_what_is_eyecue.png", :style => "margin:30px 0;" %>
+</div>
